// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.document() - arguments given - handles v4 js and css syntax 1`] = `
"<!doctype html>
<html lang=\\"en-US\\">
    <head>
        <meta charset=\\"utf-8\\">
        <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
        <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=Edge\\">
        <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://somecssurl1.com\\">
        <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://somecssurl2.com\\">
        <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://somecssurl3.com\\">
        <script defer src=\\"http://somejsurl1.com\\" ></script>
        <script defer src=\\"http://somejsurl2.com\\" ></script>
        <script defer src=\\"http://somejsurl3.com\\" ></script>
        <title></title>
        
    </head>
    <body>
        
    </body>
</html>"
`;

exports[`.document() - arguments given - should render template using values given 1`] = `
"<!doctype html>
<html lang=\\"en-NZ\\">
    <head>
        <meta charset=\\"utf-pretend-encoding\\">
        <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
        <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=Edge\\">
        <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://somecssurl.com\\">
        <script defer src=\\"http://somejsurl.com\\" ></script>
        <title>this goes in the title tag</title>
        this goes in the head section
    </head>
    <body>
        this goes in the body section
    </body>
</html>"
`;

exports[`.document() - js "type" is "esm" - should set type to module on script tags 1`] = `
"<!doctype html>
<html lang=\\"en-US\\">
    <head>
        <meta charset=\\"utf-8\\">
        <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
        <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=Edge\\">
        <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://somecssurl1.com\\">
        <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://somecssurl2.com\\">
        <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://somecssurl3.com\\">
        <script type=\\"module\\" defer src=\\"http://somejsurl1.com\\" ></script>
        <script type=\\"module\\" defer src=\\"http://somejsurl2.com\\" ></script>
        <script type=\\"module\\" defer src=\\"http://somejsurl3.com\\" ></script>
        <title></title>
        
    </head>
    <body>
        
    </body>
</html>"
`;

exports[`.document() - no arguments given - should render template 1`] = `
"<!doctype html>
<html lang=\\"en-US\\">
    <head>
        <meta charset=\\"utf-8\\">
        <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
        <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=Edge\\">
        
        
        <title></title>
        
    </head>
    <body>
        
    </body>
</html>"
`;
